# voip.tox

./: CMakeLists.txt
src/: VOIPToxData.cpp  VOIPToxData.h  client.cpp  client.h
voip.tox/: VOIPToxAddonSettings.xml  addon.xml
